<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" >
        <TableRow  android:layout_marginTop="15dp"
            android:paddingRight="10dp" android:paddingLeft="10dp">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:singleLine="true" android:layout_marginRight="25dp"
                android:textSize="18dp" android:textStyle="bold"
                android:text="@string/str_setting_store_id" />
            <EditText android:id="@+id/store_id_edt" 
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                 android:paddingLeft="5dp"
                android:singleLine="true" android:background="@drawable/search_bar"
                 />
        </TableRow>
        
        <TableRow android:layout_marginTop="15dp"
            android:paddingRight="10dp" android:paddingLeft="10dp" >
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18dp" android:textStyle="bold"
                android:text="@string/str_setting_server_ip" />
            <EditText android:id="@+id/server_ip_edt" 
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="5dp"
                android:singleLine="true" android:background="@drawable/search_bar"
                 />
        </TableRow>
        
        <TableRow android:layout_marginTop="15dp"
            android:paddingRight="10dp" android:paddingLeft="10dp" >
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18dp" android:textStyle="bold"
                android:text="@string/str_setting_server_port" />
            <EditText android:id="@+id/server_port_edt" 
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="5dp"
                android:singleLine="true" android:background="@drawable/search_bar"
                 />
        </TableRow>
        
        <TableRow android:layout_marginTop="15dp"
            android:paddingLeft="90dp" android:paddingRight="90dp">
            <Button android:id="@+id/btn_save"
                android:layout_width="wrap_content" android:layout_height="wrap_content" 
                android:layout_weight="1" android:text="@string/str_setting_save"
                android:textSize="18dp" android:textStyle="bold" />
        </TableRow>
        
        
    </TableLayout>
    

</RelativeLayout>