<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_result"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null" >

    <ImageView
        android:id="@+id/merchandise_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ipod_nano" />

    <ImageButton
        android:id="@+id/btn_trolley_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/trolley_input"
        android:scaleType="fitEnd" />

    <ScrollView
        android:id="@+id/merchandise_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_trolley_input"
        android:layout_below="@id/merchandise_img"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/merchandise_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/merchandise_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_name_label"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/merchandise_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/merchandise_name_label"
                    android:text="IPOD"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/merchandise_model_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_model_label"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/merchandise_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/merchandise_model_label"
                    android:text="Nano"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/merchandise_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_price_label"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/merchandise_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/merchandise_price_label"
                    android:text="250"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/merchandise_storage_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_storage_label"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/merchandise_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/merchandise_storage_label"
                    android:text="10"
                    android:textSize="20dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>